--- a/app/views/citizen-truelayer/benefits-kind.html
+++ b/app/views/citizen-truelayer/benefits-kind.html
@@ -22,11 +22,11 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Do you get any benefits from work that are not money?
+          Do you get any employee benefits?
         </h1>
 
         <p class="govuk-body">
-          Benefits in kind include a company car, travel card or health insurance.
+           For example, health insurance, childcare vouchers, cycle to work and travel card loans.
         </p>
 
         <form class="form" action="benefitsinkind" method="get">
