--- a/app/views/citizen-truelayer/check-evidence.html
+++ b/app/views/citizen-truelayer/check-evidence.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="identify-outgoings-housing-tax-childcare">Back</a>
+    <a class="govuk-c-back-link" href="identify-outgoings-housing-with-housing">Back</a>
 
     <p class="govuk-body"></p>
 
@@ -38,27 +38,78 @@
               </thead>
               <tbody class="govuk-c-table__body">
                 <tr class="govuk-c-table__row">
-                  <th class="govuk-c-table__header" scope="row">Salary and pensions</th>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1800.00</td>
+                  <th class="govuk-c-table__header" scope="row">Salary or wages</th>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£535.72</td>
                 </tr>
                 <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell" scope="row">- TYREWORLD BACS - £1800.00</td>
+                  <td class="govuk-c-table__cell" scope="row">- Care Home Ltd Salary - £174.77</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">
+                    <a style="color:red">
+                      <href='#'><u>Remove</u></a>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="govuk-c-table__cell" scope="row">- Care Home Ltd Salary - £136.31</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">
+                    <a style="color:red">
+                      <href='#'><u>Remove</u></a>
+                  </td>
+                </tr>
+                <tr>
+                <td class="govuk-c-table__cell" scope="row">- Care Home Ltd Salary - £116.40</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">
+                    <a style="color:red">
+                      <href='#'><u>Remove</u></a>
+                  </td>
+                </tr>
+                <tr>
+                <td class="govuk-c-table__cell" scope="row">- Care Home Ltd Salary - £108.24</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">
+                    <a style="color:red">
+                      <href='#'><u>Remove</u></a>
+                  </td>
+                </tr>
+
+                <tr class="govuk-c-table__row">
+                  <th class="govuk-c-table__header" scope="row">State benefits</th>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£745.00</td>
+                </tr>
+                <tr class="govuk-c-table__row">
+                  <td class="govuk-c-table__cell" scope="row">- Work and child TC - £165.55</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">
                     <a style="color:red">
                       <href='#'><u>Remove</u></a>
                   </td>
                 </tr>
                 <tr class="govuk-c-table__row">
-                  <th class="govuk-c-table__header" scope="row">Benefits, property and financial support</th>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£250.00</td>
-                </tr>
-                <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell" scope="row">- CHILD MAINTENANCE - £250.00</td>
+                  <td class="govuk-c-table__cell" scope="row">- Work and child TC - £165.55</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">
                     <a style="color:red">
                       <href='#'><u>Remove</u></a>
                   </td>
                 </tr>
+                                <tr class="govuk-c-table__row">
+                  <td class="govuk-c-table__cell" scope="row">- Work and child TC - £165.55</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">
+                    <a style="color:red">
+                      <href='#'><u>Remove</u></a>
+                  </td>
+                </tr>
+                                <tr class="govuk-c-table__row">
+                  <td class="govuk-c-table__cell" scope="row">- Work and child TC - £165.55</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">
+                    <a style="color:red">
+                      <href='#'><u>Remove</u></a>
+                  </td>
+                </tr>
+                                <tr class="govuk-c-table__row">
+                  <td class="govuk-c-table__cell" scope="row">- CHB - £82.80</td>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">
+                    <a style="color:red">
+                      <href='#'><u>Remove</u></a>
+                  </td>
+                </tr>
+
               </tbody>
             </table>
             <a href='#'>Add more income</a>
@@ -76,31 +127,11 @@
               </thead>
               <tbody class="govuk-c-table__body">
                 <tr class="govuk-c-table__row">
-                  <th class="govuk-c-table__header" scope="row">Mortgage, rent and council tax</th>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1420.00</td>
+                  <th class="govuk-c-table__header" scope="row">Mortgage, rent and board</th>
+                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£248.50</td>
                 </tr>
                 <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell" scope="row">- RENT - £1200.00</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">
-                    <a style="color:red">
-                      <href='#'><u>Remove</u>
-                    </a>
-                  </td>
-                </tr>
-                <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell" scope="row">- COUNCIL TAX - £220.00</td>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">
-                    <a style="color:red">
-                      <href='#'><u>Remove</u>
-                    </a>
-                  </td>
-                </tr>
-                <tr class="govuk-c-table__row">
-                  <th class="govuk-c-table__header" scope="row">Childcare, maintenance and legal aid</th>
-                  <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£600.00</td>
-                </tr>
-                <tr class="govuk-c-table__row">
-                  <td class="govuk-c-table__cell" scope="row">- WIGGLY-TOTS NURSERY - £600.00</td>
+                  <td class="govuk-c-table__cell" scope="row">- Jess Jones 0735454 - £248.50</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">
                     <a style="color:red">
                       <href='#'><u>Remove</u>
