--- a/app/views/citizen-truelayer/identify-income-salary-other-3.html
+++ b/app/views/citizen-truelayer/identify-income-salary-other-3.html
@@ -392,8 +392,6 @@
   }
 </style>
 
-
-
 <div class="govuk-o-width-container">
 
   <div class="govuk-c-phase-banner">
@@ -408,7 +406,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="select-salary">Back</a>
+    <a class="govuk-c-back-link" href="select-other-3">Back</a>
 
     <p class="govuk-body"></p>
 
@@ -425,14 +423,32 @@
           <li>
             <h2 class="task-list-section"><span class="task-list-section-number">1. </span>Salary or wages</h2>
             <ul class="task-list-items">
-              <li class="task-list-item">
+             <li class="task-list-item">
                 <a class="task-name" aria-describedby="salary-1-completed">Care Home Ltd Salary - £174.77</a>
                 <a style="color:red">
                   <href='#'><u>Remove</u>
                 </a>
               </li>
               <li class="task-list-item">
-                <a class="task-name" href="select-salary-2">Add a transaction
+                <a class="task-name" aria-describedby="salary-1-completed">Care Home Ltd Salary - £136.31</a>
+                <a style="color:red">
+                  <href='#'><u>Remove</u>
+                </a>
+              </li>
+              <li class="task-list-item">
+                <a class="task-name" aria-describedby="salary-1-completed">Care Home Ltd Salary - £116.40</a>
+                <a style="color:red">
+                  <href='#'><u>Remove</u>
+                </a>
+              </li>
+              <li class="task-list-item">
+                <a class="task-name" aria-describedby="salary-1-completed">Care Home Ltd Salary - £108.24</a>
+                <a style="color:red">
+                  <href='#'><u>Remove</u>
+                </a>
+              </li>
+              <li class="task-list-item">
+                <a class="task-name" href="select-salary-5">Add a transaction
                 </a>
               </li>
             </ul>
@@ -442,7 +458,25 @@
                     <span class="task-list-section-number">2. </span>State benefits</h2>
             <ul class="task-list-items">
               <li class="task-list-item">
-                <a class="task-name" href="#">
+                <a class="task-name" aria-describedby="salary-1-completed">Work and child TC - £165.55</a>
+                <a style="color:red">
+                  <href='#'><u>Remove</u>
+                </a>
+              </li>
+              <li class="task-list-item">
+                <a class="task-name" aria-describedby="salary-1-completed">Work and child TC - £165.55</a>
+                <a style="color:red">
+                  <href='#'><u>Remove</u>
+                </a>
+              </li>
+              <li class="task-list-item">
+                <a class="task-name" aria-describedby="salary-1-completed">Work and child TC - £165.55</a>
+                <a style="color:red">
+                  <href='#'><u>Remove</u>
+                </a>
+              </li>
+              <li class="task-list-item">
+                <a class="task-name" href="select-other-4">
                         Add a transaction
                 </a>
               </li>
@@ -512,7 +546,8 @@
            
         </ol>
 
-        <a class="govuk-c-button govuk-c-button" href="" role="button">Continue</a>
+
+        <a class="govuk-c-button govuk-c-button" href="other-income" role="button">Continue</a>
 
       </div>
 
