--- a/app/views/citizen-truelayer/identify-income-with-salary-2.html
+++ b/app/views/citizen-truelayer/identify-income-with-salary-2.html
@@ -408,7 +408,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="select-salary">Back</a>
+    <a class="govuk-c-back-link" href="select-salary-2">Back</a>
 
     <p class="govuk-body"></p>
 
@@ -432,7 +432,13 @@
                 </a>
               </li>
               <li class="task-list-item">
-                <a class="task-name" href="select-salary-2">Add a transaction
+                <a class="task-name" aria-describedby="salary-1-completed">Care Home Ltd Salary - £136.31</a>
+                <a style="color:red">
+                  <href='#'><u>Remove</u>
+                </a>
+              </li>
+              <li class="task-list-item">
+                <a class="task-name" href="select-salary-3">Add a transaction
                 </a>
               </li>
             </ul>
