--- a/app/views/citizen-truelayer/identify-outgoings-with-housing.html
+++ b/app/views/citizen-truelayer/identify-outgoings-with-housing.html
@@ -436,28 +436,12 @@
             <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" aria-describedby="housing-1-completed">
-                    RENT - £1200.00
+                    Jess Jones 0735454 - £248.50
                 </a>
                 <a style="color:red">
                   <href='#'><u>Remove</u>
                 </a>
               </li>
-              <li class="task-list-item">
-                <a class="task-name" href="select-council-tax">
-                  Add a transaction
-                </a>
-              </li>
-            </ul>
-          </li>
-          <li>
-            <h2 class="task-list-section">
-              <span class="task-list-section-number">2. </span>Childcare, maintenance and legal aid
-            </h2>
-            <p class="govuk-body"><span class="govuk-c-label__hint">
-              Add payments to a registered childcare provider, maintenance payments and existing legal aid contributions
-
-            </span></p>
-            <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" href="#">
                   Add a transaction
@@ -465,10 +449,63 @@
               </li>
             </ul>
           </li>
+          <li>
+            <h2 class="task-list-section">
+                    <span class="task-list-section-number">2. </span>Council tax
+            </h2>
+            <ul class="task-list-items">
+              <li class="task-list-item">
+                <a class="task-name" href="#">
+                        Add a transaction
+                </a>
+              </li>
+            </ul>
+          </li>
+
+          <li>
+            <h2 class="task-list-section">
+                    <span class="task-list-section-number">3. </span>Childcare to a registered provider
+            </h2>
+            <ul class="task-list-items">
+              <li class="task-list-item">
+                <a class="task-name" href="#">
+                        Add a transaction
+                </a>
+              </li>
+            </ul>
+          </li>
+
+          <li>
+            <h2 class="task-list-section">
+                    <span class="task-list-section-number">4. </span>Child maintenance
+            </h2>
+            <ul class="task-list-items">
+              <li class="task-list-item">
+                <a class="task-name" href="#">
+                        Add a transaction
+                </a>
+              </li>
+            </ul>
+          </li>
+
+
+         <li>
+            <h2 class="task-list-section">
+                    <span class="task-list-section-number">5. </span>Existing legal aid contributions
+            </h2>
+            <ul class="task-list-items">
+              <li class="task-list-item">
+                <a class="task-name" href="#">
+                        Add a transaction
+                </a>
+              </li>
+            </ul>
+          </li>
+
 
         </ol>
 
-        <a class="govuk-c-button govuk-c-button" href="" role="button">Continue</a>
+        <a class="govuk-c-button govuk-c-button" href="check-evidence" role="button">Continue</a>
 
       </div>
 
