--- a/app/views/citizen-truelayer/identify-outgoings.html
+++ b/app/views/citizen-truelayer/identify-outgoings.html
@@ -418,20 +418,13 @@
           Outgoings
         </h2>
 
-        <h3 class="govuk-heading-m">
-          Tell us about your outgoings over the last 30 days
-        </h3>
-
-        <p class="govuk-body">We will now list all payments out of your account. Please mark which of these payments fall into the following categories.</p>
+        <p class="govuk-body">Tell us what you have paid out of your bank accounts in the last 30 days.</p>
 
         <ol class="task-list">
           <li>
             <h2 class="task-list-section">
-                    <span class="task-list-section-number">1. </span>Mortgage, rent and council tax
+                    <span class="task-list-section-number">1. </span>Mortgage, rent or board
             </h2>
-            <p class="govuk-body"><span class="govuk-c-label__hint">
-              Add payments for mortgage, rent, board or lodging, and council tax bills
-            </span></p>
             <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" href="select-housing">
@@ -440,13 +433,11 @@
               </li>
             </ul>
           </li>
+          
           <li>
             <h2 class="task-list-section">
-                    <span class="task-list-section-number">2. </span>Childcare, maintenance and legal aid
+                    <span class="task-list-section-number">2. </span>Council tax
             </h2>
-            <p class="govuk-body"><span class="govuk-c-label__hint">
-              Add payments to a registered childcare provider, maintenance payments and existing legal aid contributions
-            </span></p>
             <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" href="#">
@@ -455,6 +446,47 @@
               </li>
             </ul>
           </li>
+
+          <li>
+            <h2 class="task-list-section">
+                    <span class="task-list-section-number">3. </span>Childcare to a registered provider
+            </h2>
+            <ul class="task-list-items">
+              <li class="task-list-item">
+                <a class="task-name" href="#">
+                        Add a transaction
+                </a>
+              </li>
+            </ul>
+          </li>
+
+          <li>
+            <h2 class="task-list-section">
+                    <span class="task-list-section-number">4. </span>Child maintenance
+            </h2>
+            <ul class="task-list-items">
+              <li class="task-list-item">
+                <a class="task-name" href="#">
+                        Add a transaction
+                </a>
+              </li>
+            </ul>
+          </li>
+
+
+         <li>
+            <h2 class="task-list-section">
+                    <span class="task-list-section-number">5. </span>Existing legal aid contributions
+            </h2>
+            <ul class="task-list-items">
+              <li class="task-list-item">
+                <a class="task-name" href="#">
+                        Add a transaction
+                </a>
+              </li>
+            </ul>
+          </li>
+
         </ol>
         <a class="govuk-c-button govuk-c-button" href="" role="button">Continue</a>
       </div>
