--- a/app/views/citizen-truelayer/obmultiple-yes.html
+++ b/app/views/citizen-truelayer/obmultiple-yes.html
@@ -20,10 +20,8 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Do you have online access to your accounts with other banks?
+          Do you have any bank accounts you can't access online?
         </h1>
-
-        <p class="govuk-body">If you do not, you will need to provide paper evidence for these accounts.</p>
 
         <form class="form" action="suitable-for-ob" method="get">
 
