--- a/app/views/citizen-truelayer/obmultiple.html
+++ b/app/views/citizen-truelayer/obmultiple.html
@@ -14,16 +14,14 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="obbank">Back</a>
+    <a class="govuk-c-back-link" href="bank-success">Back</a>
     <p class="govuk-body"></p>
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h1 class="govuk-heading-xl">
-          Do you have accounts with other banks?
+          Do you want to sign in to another bank?
         </h1>
-
-        <p class="govuk-body">Share details of any accounts you have with another bank or building society.</p>
 
         <form class="form" action="multibank" method="get">
 
@@ -47,6 +45,7 @@
           <input class="govuk-c-button" type="submit" value="Continue">
 
         </form>
+        <p class="govuk-body"><a href="http://www.bbc.co.uk">Income route 2 - statement view</a></p>
 
       </div>
     </div>
