--- a/app/views/citizen-truelayer/select-other.html
+++ b/app/views/citizen-truelayer/select-other.html
@@ -97,7 +97,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="identify-income-with-salary">Back</a>
+    <a class="govuk-c-back-link" href="identify-income-with-salary-4">Back</a>
 
     <p class="govuk-body"></p>
 
@@ -105,31 +105,11 @@
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
         <h2 class="govuk-heading-xl">
-              Select benefits, property and financial support
+              Select state benefits
         </h2>
 
+        <p class="govuk-body">We have listed items from your bank statement by the highest incoming payment to help you.</p>
 
-        <p class="govuk-body">Add any state benefits, rental income from a property or lodger, student loans and maintenance payments.</p>
-        <p class="govuk-body">We have listed items from your statement by the highest incoming payment to help you.</p>
-
-        <details>
-          <summary><span class="summary">What income should you tell us about?</span></summary>
-
-          <div class="panel panel-border-narrow">
-
-            <p style="govuk-body">
-              <ul>
-                <li>benefits such as Child Benefit, Working Tax Credits, Child Tax Credits, Universal Credit, Incapacity Benefit, Industrial Injuries Disablement Benefit, Contribution-based Job Seekers' Allowance</li>
-                <li>extra payments from your employer such as relocation costs</li>
-                <li>board from a family member, lodger or tenant</li>
-                <li>rent from another property</li>
-                <li>maintenance payments</li>
-                <li>student grant or loan</li>
-                <li>financial support from a friend or family member</li>
-              </ul>
-            </p>
-          </div>
-        </details>
         <br>
         <table class="govuk-c-table--two-thirds" style="border-spacing:0">
 
@@ -142,19 +122,9 @@
             </tr>
           </thead>
           <tbody class="govuk-c-table__body">
-            <tr class="govuk-c-table__row">
-              <td class="govuk-c-table__cell">CASH DEPOSIT</td>
-              <td class="govuk-c-table__cell">18 APR 2018</td>
-              <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£420.00</td>
-              <td class="govuk-c-table__cell">
-                <div class="govuk-c-radios__item">
-                  <label><input type="radio" id='regular' name="salary"></label>
-                </div>
-              </td>
-            </tr>
-            <tr class="govuk-c-table__row">
-              <td class="govuk-c-table__cell">CHILD MAINTENANCE</td>
-              <td class="govuk-c-table__cell">02 APR 2018</td>
+           <tr class="govuk-c-table__row">
+              <td class="govuk-c-table__cell">Cash in HSBC 17Oct</td>
+              <td class="govuk-c-table__cell">17 OCT 2017</td>
               <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£250.00</td>
               <td class="govuk-c-table__cell">
                 <div class="govuk-c-radios__item">
@@ -163,8 +133,63 @@
               </td>
             </tr>
             <tr class="govuk-c-table__row">
-              <td class="govuk-c-table__cell">MS JANE DOE TRANSFER</td>
-              <td class="govuk-c-table__cell">11 APR 2018</td>
+              <td class="govuk-c-table__cell">Care Home Ltd Salary</td>
+              <td class="govuk-c-table__cell">23 OCT 2017</td>
+              <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£174.77</td>
+              <td class="govuk-c-table__cell">
+              </td>
+            </tr>
+            <tr class="govuk-c-table__row">
+              <td class="govuk-c-table__cell">Work and child TC</td>
+              <td class="govuk-c-table__cell">29 SEP 2017</td>
+              <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£165.55</td>
+              <td class="govuk-c-table__cell">
+                <div class="govuk-c-radios__item">
+                  <label><input type="radio" id='regular' name="salary"></label>
+                </div>
+              </td>
+            </tr>
+            <tr class="govuk-c-table__row">
+              <td class="govuk-c-table__cell">Work and child TC</td>
+              <td class="govuk-c-table__cell">06 OCT 2017</td>
+              <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£165.55</td>
+              <td class="govuk-c-table__cell">
+                <div class="govuk-c-radios__item">
+                  <label><input type="radio" id='regular' name="salary"></label>
+                </div>
+              </td>
+            </tr>
+            <tr class="govuk-c-table__row">
+              <td class="govuk-c-table__cell">Work and child TC</td>
+              <td class="govuk-c-table__cell">13 OCT 2017</td>
+              <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£165.55</td>
+              <td class="govuk-c-table__cell">
+                <div class="govuk-c-radios__item">
+                  <label><input type="radio" id='regular' name="salary"></label>
+                </div>
+              </td>
+            </tr>
+            <tr class="govuk-c-table__row">
+              <td class="govuk-c-table__cell">Work and child TC</td>
+              <td class="govuk-c-table__cell">20 OCT 2017</td>
+              <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£165.55</td>
+              <td class="govuk-c-table__cell">
+                <div class="govuk-c-radios__item">
+                  <label><input type="radio" id='regular' name="salary"></label>
+                </div>
+              </td>
+            </tr>
+
+                        <tr class="govuk-c-table__row">
+              <td class="govuk-c-table__cell">Care Home Ltd Salary</td>
+              <td class="govuk-c-table__cell">14 OCT 2017</td>
+              <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£136.31</td>
+              <td class="govuk-c-table__cell">
+              </td>
+            </tr>
+            <tr class="govuk-c-table__row">
+              <td class="govuk-c-table__cell">Cash in HSBC 16Oct</td>
+              <td class="govuk-c-table__cell">14 OCT 2017</td>
               <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£130.00</td>
               <td class="govuk-c-table__cell">
                 <div class="govuk-c-radios__item">
@@ -173,9 +198,23 @@
               </td>
             </tr>
             <tr class="govuk-c-table__row">
-              <td class="govuk-c-table__cell">MR JOHN SMITH TRANSFER</td>
-              <td class="govuk-c-table__cell">19 APR 2018</td>
-              <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£30.00</td>
+              <td class="govuk-c-table__cell">Care Home Ltd Salary</td>
+              <td class="govuk-c-table__cell">09 OCT 2017</td>
+              <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£116.40</td>
+              <td class="govuk-c-table__cell">
+              </td>
+            </tr>
+            <tr class="govuk-c-table__row">
+              <td class="govuk-c-table__cell">Care Home Ltd Salary</td>
+              <td class="govuk-c-table__cell">02 OCT 2017</td>
+              <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£108.24</td>
+              <td class="govuk-c-table__cell">
+              </td>
+            </tr>
+            <tr class="govuk-c-table__row">
+              <td class="govuk-c-table__cell">CHB</td>
+              <td class="govuk-c-table__cell">23 OCT 2017</td>
+              <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£82.80</td>
               <td class="govuk-c-table__cell">
                 <div class="govuk-c-radios__item">
                   <label><input type="radio" id='regular' name="salary"></label>
@@ -183,9 +222,9 @@
               </td>
             </tr>
             <tr class="govuk-c-table__row">
-              <td class="govuk-c-table__cell">PAYPAL WWW.EBAY.COM</td>
-              <td class="govuk-c-table__cell">05 APR 2018</td>
-              <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£27.00</td>
+              <td class="govuk-c-table__cell">Cash in HSBC 09Oct</td>
+              <td class="govuk-c-table__cell">09 OCT 2017</td>
+              <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£60.00</td>
               <td class="govuk-c-table__cell">
                 <div class="govuk-c-radios__item">
                   <label><input type="radio" id='regular' name="salary"></label>
@@ -193,9 +232,9 @@
               </td>
             </tr>
             <tr class="govuk-c-table__row">
-              <td class="govuk-c-table__cell">MS JANE DOE TRANSFER</td>
-              <td class="govuk-c-table__cell">03 APR 2018</td>
-              <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£15.86</td>
+              <td class="govuk-c-table__cell">Sky digital reversal of 03-10</td>
+              <td class="govuk-c-table__cell">03 OCT 2017</td>
+              <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£56.79</td>
               <td class="govuk-c-table__cell">
                 <div class="govuk-c-radios__item">
                   <label><input type="radio" id='regular' name="salary"></label>
@@ -203,25 +242,16 @@
               </td>
             </tr>
             <tr class="govuk-c-table__row">
-              <td class="govuk-c-table__cell">MR JOHN SMITH TRANSFER</td>
-              <td class="govuk-c-table__cell">30 APR 2018</td>
-              <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£10.00</td>
+              <td class="govuk-c-table__cell">Sky digital reversal of 11-10</td>
+              <td class="govuk-c-table__cell">03 OCT 2017</td>
+              <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£56.79</td>
               <td class="govuk-c-table__cell">
                 <div class="govuk-c-radios__item">
                   <label><input type="radio" id='regular' name="salary"></label>
                 </div>
               </td>
             </tr>
-            <tr class="govuk-c-table__row">
-              <td class="govuk-c-table__cell">MR JOHN SMITH TRANSFER</td>
-              <td class="govuk-c-table__cell">29 APR 2018</td>
-              <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£7.50</td>
-              <td class="govuk-c-table__cell">
-                <div class="govuk-c-radios__item">
-                  <label><input type="radio" id='regular' name="salary"></label>
-                </div>
-              </td>
-            </tr>
+
           </tbody>
         </table>
         <br>
