--- a/app/views/citizen-truelayer/start.html
+++ b/app/views/citizen-truelayer/start.html
@@ -23,20 +23,27 @@
         </h2>
 
         <p class="govuk-body">
-          Name: <strong>John Doe</strong><br> Case reference: <strong>2018/LAA/4ewrqfdd</strong></p>
+          Name: <strong>John Doe</strong><br>
+          Case reference: <strong>2018/LAA/4ewrqfdd</strong><br>
+          Your solicitor: <strong>Hitchcock, Jones & King</strong></p>
 
-        <p class="govuk-body">Find out if you can get legal aid because of your financial situation.</p>
+        <p class="govuk-body">You will need to tell us about your:</p>
 
-        <p class="govuk-body">You might not have to pay legal costs if you are on certain benefits, a low income or have little or no savings.</p>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>bank accounts</li>
+          <li>income and outgoings</li>
+          <li>savings, property and any other assets</li>
+        </ul>
+
+        <p class="govuk-body">We use this information to work out if you can get legal aid or need to pay towards the legal costs.</p></p>
 
         <h3>What you will need</h3>
         <p></p>
         <ul class="govuk-list govuk-list--bullet">
-          <li>your National Insurance number and date of birth</li>
-          <li>your online banking login credentials</li>
+          <li>your online banking sign in details</li>
         </ul>
 
-        <a class="govuk-c-button govuk-c-button--start govuk-!-mt-r2 govuk-!-mb-r8" href="obconsent" role="button">Start</a>
+        <a class="govuk-c-button govuk-c-button--start govuk-!-mt-r2 govuk-!-mb-r8" href="obbank" role="button">Start</a>
 
       </div>
 
