--- a/app/views/citizen-truelayer/identify-income-with-salary-3.html
+++ b/app/views/citizen-truelayer/identify-income-with-salary-3.html
@@ -408,7 +408,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="select-salary">Back</a>
+    <a class="govuk-c-back-link" href="select-salary-3">Back</a>
 
     <p class="govuk-body"></p>
 
@@ -425,14 +425,26 @@
           <li>
             <h2 class="task-list-section"><span class="task-list-section-number">1. </span>Salary or wages</h2>
             <ul class="task-list-items">
-              <li class="task-list-item">
+             <li class="task-list-item">
                 <a class="task-name" aria-describedby="salary-1-completed">Care Home Ltd Salary - £174.77</a>
                 <a style="color:red">
                   <href='#'><u>Remove</u>
                 </a>
               </li>
               <li class="task-list-item">
-                <a class="task-name" href="select-salary-2">Add a transaction
+                <a class="task-name" aria-describedby="salary-1-completed">Care Home Ltd Salary - £136.31</a>
+                <a style="color:red">
+                  <href='#'><u>Remove</u>
+                </a>
+              </li>
+              <li class="task-list-item">
+                <a class="task-name" aria-describedby="salary-1-completed">Care Home Ltd Salary - £116.40</a>
+                <a style="color:red">
+                  <href='#'><u>Remove</u>
+                </a>
+              </li>
+              <li class="task-list-item">
+                <a class="task-name" href="select-salary-4">Add a transaction
                 </a>
               </li>
             </ul>
@@ -512,7 +524,7 @@
            
         </ol>
 
-        <a class="govuk-c-button govuk-c-button" href="" role="button">Continue</a>
+        <a class="govuk-c-button govuk-c-button" href="#" role="button">Continue</a>
 
       </div>
 
