--- a/app/views/citizen-truelayer/identify-income.html
+++ b/app/views/citizen-truelayer/identify-income.html
@@ -413,24 +413,16 @@
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-        <h2 class="govuk-heading-xl">
+        <h1 class="govuk-heading-xl">
           Income
-        </h2>
+        </h1>
 
-        <h3 class="govuk-heading-m">
-          Tell us about your income over the last 30 days
-        </h3>
-
-        <p class="govuk-body">We will now list all payments into your account. Please mark which of these payments fall into the following categories.</p>
+        <p class="govuk-body">Choose bank transactions from the last 30 days to tell us about your income.</p>
 
         <ol class="task-list">
           <li>
             <h2 class="task-list-section">
-                    <span class="task-list-section-number">1. </span>Salary and pensions</h2>
-            <p class="govuk-body"><span class="govuk-c-label__hint">
-              Add any salary or wages, and income from state and private pensions
-            </span></p>
-
+                    <span class="task-list-section-number">1. </span>Salary or wages</h2>
             <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" href="select-salary">
@@ -439,31 +431,22 @@
               </li>
             </ul>
           </li>
+
           <li>
             <h2 class="task-list-section">
-                    <span class="task-list-section-number">2. </span>Benefits, property and financial support</h2>
-            <p class="govuk-body"><span class="govuk-c-label__hint">
-              Add any state benefits, rental income from a property or lodger, student loans and maintenance payments
-            </span></p>
-            <details>
-              <summary><span class="summary">What should you tell us about?</span></summary>
+                    <span class="task-list-section-number">2. </span>State benefits</h2>
+            <ul class="task-list-items">
+              <li class="task-list-item">
+                <a class="task-name" href="#">
+                        Add a transaction
+                </a>
+              </li>
+            </ul>
+          </li>
 
-              <div class="panel panel-border-narrow">
-
-                <p style="govuk-body">
-                  <ul style="govuk">
-                    <li>- benefits such as Child Benefit Working Tax Credits, Child Tax Credits, Universal Credit, Incapacity Benefit, Industrial Injuries Disablement Benefit, Contribution-based Job Seekers' Allowance</li>
-                    <li>- extra payments from your employer such as relocation costs</li>
-                    <li>- board from a family member, lodger or tenant</li>
-                    <li>- rent from another property</li>
-                    <li>- maintenance payments</li>
-                    <li>- student grant or loan</li>
-                    <li>- financial support from a friend or family member</li>
-                  </ul>
-                </p>
-              </div>
-            </details>
-            <br>
+          <li>
+            <h2 class="task-list-section">
+                    <span class="task-list-section-number">3. </span>Child maintenance</h2>
             <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" href="#">
@@ -471,6 +454,55 @@
                       </a>
               </li>
             </ul>
+          </li>
+
+          <li>
+            <h2 class="task-list-section">
+                    <span class="task-list-section-number">4. </span>Rent from a property or lodger</h2>
+            <ul class="task-list-items">
+              <li class="task-list-item">
+                <a class="task-name" href="#">
+                        Add a transaction
+                      </a>
+              </li>
+           </ul>
+          </li>
+
+          <li>
+            <h2 class="task-list-section">
+                    <span class="task-list-section-number">5. </span>Student loan or grant</h2>
+            <ul class="task-list-items">
+              <li class="task-list-item">
+                <a class="task-name" href="#">
+                        Add a transaction
+                      </a>
+              </li>
+           </ul>
+          </li>
+
+          <li>
+            <h2 class="task-list-section">
+                    <span class="task-list-section-number">6. </span>Pension</h2>
+            <ul class="task-list-items">
+              <li class="task-list-item">
+                <a class="task-name" href="#">
+                        Add a transaction
+                      </a>
+              </li>
+           </ul>
+          </li>
+
+
+          <li>
+            <h2 class="task-list-section">
+                    <span class="task-list-section-number">7. </span>Financial help from friends or family</h2>
+            <ul class="task-list-items">
+              <li class="task-list-item">
+                <a class="task-name" href="#">
+                        Add a transaction
+                      </a>
+              </li>
+           </ul>
           </li>
         </ol>
 
