--- a/app/views/citizen-truelayer/obbank.html
+++ b/app/views/citizen-truelayer/obbank.html
@@ -39,38 +39,65 @@
 
     <main role="main" class="govuk-o-main-wrapper">
 
-      <a class="govuk-c-back-link " href="dwpdetails">Back</a>
+      <a class="govuk-c-back-link " href="start">Back</a>
       <p class="govuk-body"></p>
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-          <h1 class="govuk-heading-xl">
-          Give one-time access to your bank accounts
-          </h1>
+          <div class="govuk-c-checkboxes">
+            <fieldset class="govuk-c-fieldset">
+              <legend class="govuk-c-fieldset__legend">
+                <h1 class="govuk-heading-xl">Do you agree to give one-time access to your bank accounts?</h1>
+              </legend>
 
-          <form class="form" id="bankForm" action="bank-success" method="get">
+              <p class="govuk-body">You will be redirected to a secure service to sign in to your online banking.</p>
 
-            <p class="govuk-body">
-              You will be redirected to a secure service to sign in to your online banking.
-            </p>
+             <p class="govuk-body">You will be asked to allow the Legal Aid Agency to download 3 months of bank transactions.</p>
 
-            <p class="govuk-body">You will need to share all of your bank accounts, including any in joint names or with no money.</p>
+             <p class="govuk-body">You should sign in to all of your accounts, including any with different banks or in joint names.</p>
 
 
-            <div class="govuk-c-warning-text">
-              <span class="govuk-c-warning-text__icon govuk-o-circle" aria-hidden="true">!</span>
-              <strong class="govuk-c-warning-text__text">
-                How we connect to your online banking
-              </strong>
-            </div>
+              <!--p class="govuk-body"><a href="#">Find out how we use and store your personal data</a></p-->
 
-            <p class="govuk-body">
-              <ul class="govuk-list govuk-list--bullet">
-                <li>Sign in and authorise access to your accounts</li>
-                <li>We download 3 months of transactions</li>
-                <li>Your online banking details are not saved</li>
-              </ul>
-            </p>
+
+              <details>
+                <summary><span class="summary"<a href="#">Find out how we use your personal data</a></span></summary>
+
+                <div class="panel panel-border-narrow">
+
+                  <p style="govuk-body">
+                    <ul style="govuk">
+                      <li>We will not have access to your online banking username and password</li>
+                      <li>We will not have ongoing access to your bank accounts</li>
+                      <li>We will only share transaction details with your solicitor, not anyone else</li>
+                      <li>We will only use your information for your legal aid application, not anything else</li>
+                  </p>
+                </div>
+              </details>
+
+              </br>
+
+              <!--/br>
+              <div class="govuk-c-checkboxes__item">
+                <input class="govuk-c-checkboxes__input" id="dwp" name="consent" value="dwp" type="checkbox">
+                <label class="govuk-c-label govuk-c-checkboxes__label" for="dwp">
+                  <b>I agree for you to check my tax and benefits status</b><br>
+                      using my National Insurance number and date of birth
+                </label>
+              </div>
+            </br-->
+
+              <div class="govuk-c-checkboxes__item">
+                <input class="govuk-c-checkboxes__input" id="ob" name="consent" value="ob" type="checkbox">
+                <label class="govuk-c-label govuk-c-checkboxes__label" for="ob">
+                  <b>I agree for you to check 3 months of bank transactions</b><br>
+                      using temporary access to my online banking
+                </label>
+              </div>
+
+
+            </fieldset>
+          </div>
 
             <a role="button" class="govuk-c-button" href="#" id="truelayerRedirect">Continue</a>
 
