--- a/app/views/citizen-truelayer/select-salary-3.html
+++ b/app/views/citizen-truelayer/select-salary-3.html
@@ -42,7 +42,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="identify-income">Back</a>
+    <a class="govuk-c-back-link" href="identify-income-with-salary-2">Back</a>
 
     <p class="govuk-body"></p>
 
@@ -81,9 +81,6 @@
               <td class="govuk-c-table__cell">23 OCT 2017</td>
               <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£174.77</td>
               <td class="govuk-c-table__cell">
-                <div class="govuk-c-radios__item">
-                  <label><input type="radio" id='regular' name="salary"></label>
-                </div>
               </td>
             </tr>
             <tr class="govuk-c-table__row">
@@ -126,14 +123,12 @@
                 </div>
               </td>
             </tr>
+
                         <tr class="govuk-c-table__row">
               <td class="govuk-c-table__cell">Care Home Ltd Salary</td>
               <td class="govuk-c-table__cell">14 OCT 2017</td>
               <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£136.31</td>
               <td class="govuk-c-table__cell">
-                <div class="govuk-c-radios__item">
-                  <label><input type="radio" id='regular' name="salary"></label>
-                </div>
               </td>
             </tr>
             <tr class="govuk-c-table__row">
@@ -211,7 +206,7 @@
         </table>
         <br>
 
-        <a class="govuk-c-button govuk-c-button" href="identify-income-with-salary" role="button">Add</a>
+        <a class="govuk-c-button govuk-c-button" href="identify-income-with-salary-3" role="button">Add</a>
 
       </div>
 
